# tatooine

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  abcflow.h  boundingbox.h  c_interface.mod  configure_cmake_for_juwels.sh  crtp.h  derived_field.h  doublegyre.h  field.h  filter_single_segments.cpp  functional.h  gdb_pretty_printer.py  grid.h  grid_edge.h  grid_sampler.h  grid_vertex.h  grid_vertex_edges.h  grid_vertex_neighbors.h  interpolation.h  line.h  linspace.h  multiindexeddata.h  parallel_vectors.h  property.h  quadtree.h  random.h  spacetime.h  string_conversion.h  subgrid.h  swap_endianess.h  symbolic.h  symbolic_field.h  tags  tatooineConfig.cmake.in  (+4 more)
autonomous_particles/: CMakeLists.txt  abcflow_grid.cpp  advect.h  animation.cpp  channelflow_grid.cpp  channelflow_pathlines.cpp  channelflow_single.cpp  channelflow_single.cpp.orig  data_for_christian.cpp  dg_grid.cpp  doublegyre_actual_transformation.cpp  doublegyre_error_measure.cpp  doublegyre_grid.cpp  doublegyre_initial_square.cpp  doublegyre_single.cpp  ellipsis_vertices.cpp  ellipsis_vertices.h  explorer.cpp  explorer.cpp.orig  holger.cpp  interactive.cpp  janos_example.cpp  parse_args.cpp  parse_args.h  post_triangulation.cpp  split_behavior.h  tornado_grid.cpp  weight_guess.cpp  write_ellipses.h
benchmarks/: CMakeLists.txt  benchmark.h  buffer_reduction.cpp  cpu_reduction.cpp  einstein.cpp  line.cpp  main.cpp  texture_reduction.cpp
channelflow/: CMakeLists.txt  channelflow_visualization.cpp  create_Q.cpp  create_velocity_magnitude.cpp  cutting_planes.cpp  data_check.cpp  direct_isosurface.cpp  direct_volume.cpp  pv_mpi.cpp
dino_interface/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile  Doxyfile.base.in  Doxyfile.html.in  Doxyfile.in  Doxyfile.pdf.in  Doxyfile.xml.in  Makefile  bibliography.bib  building.rst  cmake_install.cmake  conf.py  conf.py.in  finite_difference_coefficients_calculator.html  index.rst  macros.inc  task1.rst  todo_list.rst
examples/: CMakeLists.txt  agranovsky_flowmap_discretization.cpp  amira.cpp  autonomous_particle.cpp  autonomous_particle_flowmap_discretization.cpp  callgrind.cpp  constrained_delaunay.cpp  cutting_plane_doublegyre.cpp  delaunay_triangulation.cpp  direct_iso.cpp  direct_iso_discretized_tornado.cpp  direct_iso_tornado.cpp  direct_isosurface_rendering_analytical_tornado.cpp  direct_isosurface_rendering_discretized_tornado.cpp  direct_volume.cpp  direct_volume_iso.cpp  edgeset.cpp  einstein_notation.cpp  einstein_notation_simple.cpp  ellipsoid.cpp  ftle.cpp  generalized_barycentric_coordinates.cpp  gpu_lic.cpp  hdf5_compound.cpp  hdf5_unlimited.cpp  infinite_discrete_domain.cpp  inverse_distance_weighting_sampler.cpp  iterator_facade.cpp  modified_doublegyre.cpp  moving_least_squares.cpp  moving_least_squares_sampler.cpp  naive_flowmap_discretization.cpp  natural_neighbor_coordinates_sampler.cpp  parallel_vectors.cpp  pointset.cpp  radial_basis_functions_sampler.cpp  rectilinear_grid.cpp  rectilinear_grid_diff_to_prop.cpp  rectilinear_grid_inverse_distance_weighting_sampler.cpp  rectilinear_grid_sample_to_vertex_property.cpp  (+11 more)
fields/: CMakeLists.txt
first_person_window_test/: CMakeLists.txt  first_person_window_test.cpp
flowexplorer/: CMakeLists.txt  README.md  boundingbox.h  flowexplorer.cpp  grid.h  line.frag  line_shader.cpp  line_shader.h.in  pathlines_boundingbox.h  random_pathlines.h  renderable.h  window.h
geometry/: .gitignore  CMakeLists.txt
gl/: CMakeLists.txt
gpu/: CMakeLists.txt
insitu/: CMakeLists.txt
material_science/: CMakeLists.txt  convert_fields.cpp  find_critical_points.cpp  texture_case1.txt  texture_case2.txt  texture_case3.txt  texture_case4.txt
misc/: CMakeLists.txt  counterexample_sadlo_bifurcationline_export.cpp  counterexample_sadlo_pv_to_streamline.cpp  curve_to_streamline_progress.h  doublegyre_criticalpointpath_export.cpp  doublegyre_criticalpointpath_to_streamline.cpp  doublegyre_pv_to_streamline.cpp  evaluate_single_arguments.cpp  newdoublegyre_bifurcationline_export.cpp  newdoublegyre_criticalpointpath_export.cpp  newdoublegyre_criticalpointpath_to_streamline.cpp  newdoublegyre_pv_to_streamline.cpp  pathlines_for_thomas.cpp  pv_counterexample_sadlo.cpp
mpi/: CMakeLists.txt
multidim_array/: CMakeLists.txt
pathline_render_window_test/: CMakeLists.txt  pathline_render_window_test.cpp
preprocessor/: CMakeLists.txt
raytracer/: CMakeLists.txt  render_sphere.cpp  render_streamsurface.cpp  simple_mesh.cpp
rendering/: CMakeLists.txt
scivis_contest_2020/: CMakeLists.txt  direct_volume.cpp  eddy_detection.cpp  eddy_props.h  ensemble_file_paths.cpp.in  ensemble_file_paths.h  ensemble_member.h  integrate_pathline.h  monitor.h  pathlines_in_eddy.cpp  positions_in_domain.h  pv.cpp  random_pathlines.cpp  random_streamlines.cpp  resample_to_amira.cpp  salt_and_temp_to_vtk.cpp  salt_to_vtk.cpp  split_durations.h  uncertain_eddy_detection.cpp
sciviscontest2020/: CMakeLists.txt  eddy_detection.cpp  imaginary_eigenvalues_jacobian.cpp  pv.cpp  random_pathlines.cpp  resample_to_amira.cpp
smearing_scalar_field/: CMakeLists.txt  io.cpp  io.h  isolines.cpp  isolines.h  parse_arguments.cpp  parse_arguments.h  smearing.cpp  test.cpp  vf_grid_prop.h
steadification/: CMakeLists.txt  batch.cpp  batch.sh  boussinesq_test.cpp  color_lic.comp  combine_rasterizations.comp  convert_rbc.cpp  coverage.comp  datasets.cpp  datasets.h  domain_coverage.comp  dual_binding.glsl  dual_coverage.comp  dual_linked_list.glsl  dual_ll_weight.comp  end_index.glsl  fragment_count.comp  fragment_count.frag  gpu_mem_cache.h  ibfv.cpp  integrate.h  integrate_grid_edge.cpp  integrator_test.cpp  layouts.glsl  lic.comp  lic_test.cpp  line.frag  line.vert  linked_list.glsl  linked_list_texture.h  linked_list_to_head_vectors.comp  ll_to_curvature_tex.comp  ll_to_pos_tex.comp  ll_to_v_tex.comp  log.org  main.cpp  main_without_graphics.cpp  mesh_viewer.frag  mesh_viewer.vert  node.glsl  (+49 more)
tensor/: CMakeLists.txt
test/: CMakeLists.txt  abcflow.cpp  autonomous_particle.cpp  autonomous_particles_error_boxplot.py  (+113 more)
(+1373 files in other folders)
